--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -13492,7 +13492,7 @@ textarea.form-control-lg {
   }
 }
 .hover-list:hover {
-  color: #64b496;
+  color: #64b496 !important;
   transition: all 0.2s linear;
 }
 
@@ -13990,22 +13990,6 @@ input[type=radio]:checked {
   z-index: 0;
 }
 
-.footer::before {
-  width: 80px;
-  height: 100px;
-  content: "";
-  background-image: url(../../uploads/12.png);
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-  position: absolute;
-  top: -20px;
-  left: 50px;
-  z-index: 0;
-}
-
 .footer::after {
   width: 120px;
   height: 150px;
@@ -14046,6 +14030,33 @@ input[type=radio]:checked {
   top: -10px;
   padding: 0 16px;
   background: #fff;
+}
+
+.header-top-main {
+  display: flex;
+}
+
+@media only screen and (max-width: 820px) {
+  .header-top-main {
+    display: block;
+  }
+}
+.blog-detail-banner {
+  background-image: url(../../uploads/banner-blog.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 350px;
+}
+
+.blog-detail-banner::before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Màu đen với độ trong suốt là 0.5 */
 }
 
 .custom-text-color {
@@ -27533,6 +27544,91 @@ textarea.form-control-lg {
 
 .h-13 {
   height: 13rem;
+}
+
+#page-container {
+  min-width: 320px;
+  min-height: 100vh;
+}
+
+#page-header {
+  min-width: 320px;
+  max-width: 100%;
+}
+
+#main-container {
+  flex: 1 0 auto;
+  max-width: 100%;
+}
+
+#footer {
+  min-height: 4.375rem;
+}
+
+.side-header-content,
+.page-header-content {
+  height: 4.25rem;
+}
+
+#sidebar {
+  transform: translateX(-100%) translateY(0) translateZ(0);
+}
+
+.hover-item {
+  background-color: #fff;
+  transition: all 0.2s linear;
+}
+
+.hover-item:hover {
+  background-color: #e4f2ed;
+  transition: all 0.2s linear;
+}
+
+#page-header.page-header-content {
+  max-width: 1920px !important;
+}
+
+.admin-main-content {
+  max-width: 1920px;
+}
+
+#main-container,
+#admin-footer {
+  width: 100%;
+}
+
+@media (min-width: 992px) {
+  .d-lg-none {
+    display: none !important;
+  }
+  .sidebar-o #sidebar {
+    transform: translateX(0) translateY(0) translateZ(0);
+  }
+  .side-trans-enable #sidebar {
+    transition: transform 0.45s cubic-bezier(0.2, 0.61, 0.42, 0.97);
+  }
+  #sidebar {
+    width: 250px !important;
+  }
+  .w-250 {
+    width: 250px !important;
+  }
+  #page-header {
+    padding-left: 250px !important;
+  }
+  .admin-main-content {
+    width: 100%;
+    overflow-x: visible;
+  }
+  #main-container,
+  #admin-footer {
+    width: calc(100% - 250px);
+  }
+}
+@media (min-width: 1200px) {
+  .page-header-content {
+    width: 100%;
+  }
 }
 
 /*# sourceMappingURL=app.css.map */
