--- a/assets/sass/_component.scss
+++ b/assets/sass/_component.scss
@@ -1,6 +1,6 @@
 @import "variable";
 .hover-list:hover {
-  color: $primary;
+  color: $primary !important;
   transition: all 0.2s linear;
 }
 .hover-list {
@@ -454,21 +454,7 @@ input[type="radio"]:checked {
   left: 100px;
   z-index: 0;
 }
-.footer::before {
-  width: 80px;
-  height: 100px;
-  content: "";
-  background-image: url(../../uploads/12.png);
-  background-size: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  -webkit-transform: scaleX(-1);
-  transform: scaleX(-1);
-  position: absolute;
-  top: -20px;
-  left: 50px;
-  z-index: 0;
-}
+
 .footer::after {
   width: 120px;
   height: 150px;
@@ -507,4 +493,28 @@ input[type="radio"]:checked {
   top: -10px;
   padding: 0 16px;
   background: $white;
+}
+.header-top-main {
+  display: flex;
+}
+@media only screen and (max-width: 820px) {
+  .header-top-main {
+    display: block;
+  }
+}
+.blog-detail-banner {
+  background-image: url(../../uploads/banner-blog.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 350px;
+}
+.blog-detail-banner::before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Màu đen với độ trong suốt là 0.5 */
 }
